web-infras/parser/tests/fixtures/babel/es2021/numeric-separator/template-with-invalid-numeric-separator-in-code-point/output.txt
[SyntaxError]: Invalid hexadecimal escape sequence. (1,1)
1|`abc\u{1000_0000}`;
 |^
